[project]
name = "tokyodata"
version = "0.1.0"
description = ""
authors = [
    {name = "MAK8405",email = "mahdiahmadi2005kf@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "plotly (>=6.1.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
